--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -336,7 +336,7 @@ img {
 /*===== HOME =====*/
 .home {
   position: relative;
-  row-gap: 5rem;
+  row-gap: 4rem;
   padding: 4rem 0 5rem;
 }
 .home__data {
@@ -346,6 +346,7 @@ img {
   font-size: var(--big-font-size);
   margin-bottom: var(--mb-5);
 }
+
 .home__title-color {
   color: var(--first-color);
 }
@@ -943,7 +944,10 @@ img {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 2rem;
-  margin-top: 2rem;
+  margin-top: 4rem;
+  margin-left: 4rem;
+  margin-right: 4rem;
+  margin-bottom: 4rem;
 }
 
 .video-iframe-container {
