readme and youtube alignment

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -406,6 +406,15 @@ img {
   border-radius: 0.5rem;
 }
 
+.about__button {
+  margin-top: 2rem;
+  display: inline-block;
+}
+
+.about__button:hover {
+  box-shadow: 0px 10px 36px rgba(0, 0, 0, 0.15);
+}
+
 /* ===== SKILLS =====*/
 .skills__container {
   row-gap: 2rem;
@@ -944,10 +953,9 @@ img {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 2rem;
-  margin-top: 4rem;
-  margin-left: 4rem;
-  margin-right: 4rem;
-  margin-bottom: 4rem;
+  max-width: 1200px;
+  margin: 4rem auto;
+  padding: 0 2rem;
 }
 
 .video-iframe-container {
